syntax = "proto3";

service FileService {
    rpc ListFiles (ListFilesRequest) returns (ListFilesResponse);
}

message ListFilesRequest {}

message ListFilesResponse {
    repeated string filenames = 1;
}